# PCD-SVD

./: README.MD  pyproject.toml  report.html  report.json
svd/: .gitignore  requirements.txt  svd_cli.py  webui.py
svd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
svd/core/: cfg.py  dataflow.py  ir.py  parser_frontend.py  report.py  rules.py  rules_post.py  utils.py
svd/examples/: buggy.c
svd/static/: styles.css
svd/templates/: editor.html  premium_report.html
